# learn-cmake-gtest-clang-CI

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: lowercase.h
scripts/: format.sh  format_check.sh
src/: lowercase.cpp  main.cpp
tests/: test.cpp
